force-app/main/default/objects/Professional_Services_Assignment__c/Professional_Services_Assignment__c.object-meta.xml
<CustomObject>
    <description>This object will include records for assignment of Human Resources which are part of Contract Agreement (SOW) to a specific Department.</description>
    <label>Professional Services Assignment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sr No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Services Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>