force-app/main/default/objects/Professional_Services_Assignment__c/fields/Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_End_Date__c</fullName>
    <description>The Date on which the Human Resource asset has been unassigned</description>
    <label>Assignment End Date</label>
    <type>Date</type>
</CustomField>