force-app/main/default/objects/Professional_Services_Assignment__c/fields/Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Start_Date__c</fullName>
    <description>The Date on which the Human Resource is assigned to a Department.</description>
    <label>Assignment Start Date</label>
    <type>Date</type>
</CustomField>