force-app/main/default/objects/Professional_Services_Assignment__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <inlineHelpText>Please select the Department Name</inlineHelpText>
    <label>Department Name</label>
    <referenceTo>Departments__c</referenceTo>
    <relationshipName>Human_Resource_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>