force-app/main/default/objects/Professional_Services_Assignment__c/fields/Professional_Service_Asset__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service_Asset__c</fullName>
    <label>Professional Service Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </filterItems>
        <filterItems>
            <field>Asset__c.Available_Resources__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Professional Services Assignments</relationshipLabel>
    <relationshipName>Human_Resource_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>