force-app/main/default/objects/Professional_Services_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Professional_Service_Asset__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Assignment_Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>